--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -22,15 +22,13 @@
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "underscore": "^1.13.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -53,8 +51,10 @@
   "devDependencies": {
     "@mui/base": "^5.0.0-alpha.99",
     "@mui/utils": "^5.10.6",
+    "@vitejs/plugin-react": "^4.0.4",
     "html-dom-parser": "^3.1.2",
     "react-router-dom": "^6.3.0",
-    "source-map-loader": "^4.0.0"
+    "source-map-loader": "^4.0.0",
+    "vite": "^4.4.9"
   }
 }
